# ultrajson

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.py
.github/workflows/: benchmark.yml  deploy-wheels-linux.yml  deploy.yml  fuzz.yml  lint.yml  test.yml
scripts/: coverage.sh
src/python/: version.h
tests/: test_ujson.py
