[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools_scm[toml]>=3.4",
]

[project]
name = "ujson"
description = "Ultra fast JSON encoder and decoder for Python"
readme = "README.md"
authors = [{name = "Jonas Tarnstrom"}]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: C",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "version",
]
[project.urls]
Download = "https://github.com/ultrajson/ultrajson"
Homepage = "https://github.com/ultrajson/ultrajson"
Source = "https://github.com/ultrajson/ultrajson"

[tool.setuptools]
platforms = ["any"]
license-files = ["LICENSE.txt"]
include-package-data = false

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.isort]
profile = "black"
