[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm[toml]>=3.4",
]

[project]
name = "ujson"
description = "Ultra fast JSON encoder and decoder for Python"
readme.content-type = "text/markdown"
readme.file = "README.md"
license = { file = "LICENSE.txt" }
authors = [ { name = "Jonas Tarnstrom" } ]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: C",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]

urls.Changelog = "https://github.com/ultrajson/ultrajson/releases"
urls.Download = "https://github.com/ultrajson/ultrajson"
urls.Homepage = "https://github.com/ultrajson/ultrajson"
urls.Source = "https://github.com/ultrajson/ultrajson"

[tool.setuptools]
platforms = [ "any" ]
include-package-data = false

[tool.setuptools_scm]

[tool.black]
target_version = [ "py38" ]

[tool.isort]
profile = "black"

[tool.pyproject-fmt]
max_supported_python = "3.13"
