[build-system]
build-backend = "setuptools.build_meta"

requires = [
  "setuptools<72.2; implementation_name=='pypy'", # https://github.com/pypa/distutils/issues/283
  "setuptools-scm[toml]>=3.4",
]

[project]
name = "ujson"
description = "Ultra fast JSON encoder and decoder for Python"
readme = "README.md"
authors = [ { name = "Jonas Tarnstrom" } ]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: C",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]

urls.Download = "https://github.com/ultrajson/ultrajson"
urls.Homepage = "https://github.com/ultrajson/ultrajson"
urls.Source = "https://github.com/ultrajson/ultrajson"

[tool.setuptools]
platforms = [ "any" ]
license-files = [ "LICENSE.txt" ]
include-package-data = false

[tool.setuptools_scm]

[tool.black]
target_version = [ "py39" ]

[tool.isort]
profile = "black"
known_first_party = [ "ujson" ]

[tool.pyproject-fmt]
max_supported_python = "3.13"
